...
            tabBarIcon: ({ focused }) => <TabIcon name="newspaper" focused={focused} />,
          }}
        />
        <Tabs.Screen
          name="sources"
          options={{
            title: 'Sources',
            tabBarIcon: ({ focused }) => <TabIcon name="globe" focused={focused} />,
          }}
        />
        <Tabs.Screen
          name="favorites"
          options={{
...
